# learning-cpp

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  README.md
0_hello_world/: build.sh  main.cpp
1_basics/: main.cpp  run.sh
2_read_and_add/: io.cpp  main.cpp  run.sh
2_read_and_add_int/: main.cpp
4_read_and_float_arithmetics/: main.cpp
4_tower_drop/: main.cpp
6_is_even/: main.cpp  run.sh
7_accumulate/: main.cpp
8_guess_secret_number/: CMakeLists.txt  main.cpp  random.h  run.sh
9_function_overloading/: main.cpp  run.sh
dev_tools/: utils.sh
hello_world/: build.sh
print_compiler_language_standard/: main.cpp  run.sh
